# space-apps-2019

./: .gitignore  .gitmodules  README.md  app.json
.github/workflows/: dockerimage.yml  main.yml
back/: .gitignore  Dockerfile  README.md  app.py  deploy.yaml  index.ts  jupyter_notebook_config.py  package.json  pyproject.toml  run.sh
back/.dev/: token-dns.yaml  token.yaml
back/co2/: .~lock.Simple Food_CO2E -UK_US.csv#
back/co2/food/: FoodCalculator.py  food_test.py
back/co2/transport/: VehicleCalculator.py
back/db/: postgres.py  sqlite.py
back/kube/: dashboard-values.yaml  db.sh  deploy.sh  deploy.yaml  ingress-nginx.yaml  ingress.yaml  mydns.values.yaml  postgres-values.yaml  service.yaml
back/models/products/: product.py
back/models/users/: user.py
back/temperature/: cmip5.py  co-emissions-in-imported-goods-as-a-share-of-domestic-emissions.csv  consumption_per_capita.txt  production-vs-consumption-co2-emissions.csv  rcp4.5.txt  rcp6.0.txt  rcp8.5.txt  temp_increase.txt
data_analysis/: VehicleCalculaor.py  VehicleCalculator.py  app.py
data_analysis/co2/: Simple Food_CO2E.csv  food_test.py  product.db  product.py
data_analysis/temperature/: app.py  cmip5.py  cmip5_utility.py  names.txt  per_capita_data.py  rcp2.6.txt  temp_increase.txt
data_analysis/users/: user.py
front/: App.js  algos.js  app.json  package.json
front/.expo/: packager-info.json  settings.json
front/.expo-shared/: assets.json
front/assets/: credits.md  food.json  hand.js  person.json
front/components/: AddButton.js  Map.js  Toast.js
front/data/: five-guys.json  (+3 more)
(+15 files in other folders)
