[tool.poetry]
name = "space-apps-2019"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.1"
flask_jwt = "^0.3.2"
numpy = "^1.17"
scipy = "^1.3"
flasgger = "^0.9.3"
peewee = "^3.11"
matplotlib = "^3.1"
jupyter = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
